@@ -30,8 +30,8 @@ import org.eclipse.edc.spi.response.StatusResult;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.UUID;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executors;
@@ -43,6 +43,7 @@ import static org.junit.jupiter.api.Assertions.fail;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+
 
 public class NegotiatorTest {
 
@@ -56,11 +57,13 @@ public class NegotiatorTest {
 
     private Negotiator clientNegotiator;
 
+
     @BeforeEach
     void initializeClientNegotiator() {
         defineMockBehaviour();
         clientNegotiator = new Negotiator(ccnmMock, cnsMock);
     }
+
 
     void defineMockBehaviour() {
         when(cnsMock.queryAgreements(any())).thenReturn(Stream.of());
@@ -68,15 +71,16 @@ public class NegotiatorTest {
                 .thenReturn(StatusResult.success(negotiation));
     }
 
+
     @Test
-    void testNegotiate() throws MalformedURLException, ExecutionException, InterruptedException {
+    void testNegotiate() throws ExecutionException, InterruptedException, URISyntaxException {
         // Mocked EDC negotiation manager returns a future which completes to a
         // successful negotiation (agreement)
         // Input is providerUrl (unimportant), contractOffer. The resulting
         // contractAgreement should have the same
         // policy as our contractOffer (not the same object reference) and the same
         // asset ID
-        var fakeUrl = new URL("https://example.com/fakeurl");
+        var fakeUri = new URI("https://example.com/fakeurl");
         var contractOffer = ContractOffer.Builder.newInstance()
                 .id(UUID.randomUUID().toString())
                 .assetId(assetId)
@@ -85,7 +89,7 @@ public class NegotiatorTest {
 
         var contractRequest = ContractRequest.Builder.newInstance()
                 .contractOffer(contractOffer)
-                .counterPartyAddress(fakeUrl.toString())
+                .counterPartyAddress(fakeUri.toString())
                 .protocol("dataspace-protocol-http")
                 .build();
 
@@ -97,7 +101,8 @@ public class NegotiatorTest {
         // will never see it
         try {
             Thread.sleep(3000);
-        } catch (InterruptedException e) {
+        }
+        catch (InterruptedException e) {
             fail();
         }
         contractNegotiationObservable.invokeForEach(listener -> listener.finalized(negotiation));
@@ -108,6 +113,7 @@ public class NegotiatorTest {
         assertEquals(mockPolicy, contractNegotiation.getContent().getContractAgreement().getPolicy());
         assertEquals(assetId, contractNegotiation.getContent().getContractAgreement().getAssetId());
     }
+
 
     /*
      * Policy containing MOCK as permitted action
@@ -121,6 +127,7 @@ public class NegotiatorTest {
                         .build())
                 .build();
     }
+
 
     private ContractNegotiation getContractNegotiation() {
         return ContractNegotiation.Builder.newInstance()
