@@ -19,8 +19,8 @@ import de.fraunhofer.iosb.ssl.SelfSignedCertificateRetriever;
 import org.eclipse.edc.spi.result.Result;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.security.KeyManagementException;
 import java.security.NoSuchAlgorithmException;
 import java.security.SecureRandom;
@@ -36,58 +36,67 @@ import javax.net.ssl.SSLSocketFactory;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
 
+
 /**
- * Retrieve certificates of an online service by its URL.
- * This should only be used for explicitly known services and URLs!
- * (Example: Create a FA³ST service which uses TLS with a self-signed certificate if no other is provided.
- * -> Need its cert to communicate with it)
+ * Retrieve certificates of an online service by its URL. This should only be used for explicitly known services and URLs! (Example: Create a FA³ST service which uses TLS with a
+ * self-signed certificate if no other is provided. -> Need its cert to communicate with it)
  */
 public class DefaultSelfSignedCertificateRetriever implements SelfSignedCertificateRetriever {
 
-    private static final TrustManager[] TRUST_ALL_MANAGER = new TrustManager[]{ new X509TrustManager() {
-        public X509Certificate[] getAcceptedIssuers() {
-            return null;
-        }
+    private static final TrustManager[] TRUST_ALL_MANAGER = new TrustManager[] {
+            new X509TrustManager() {
+                public X509Certificate[] getAcceptedIssuers() {
+                    return null;
+                }
 
-        public void checkClientTrusted(X509Certificate[] certs, String authType) {
-        }
 
-        public void checkServerTrusted(X509Certificate[] certs, String authType) {
-        }
-    } };
+                public void checkClientTrusted(X509Certificate[] certs, String authType) {
+                }
 
-    public static boolean isTrusted(String urlString) {
+
+                public void checkServerTrusted(X509Certificate[] certs, String authType) {
+                }
+            }
+    };
+
+
+    public static boolean isTrusted(String uriString) {
         HttpsURLConnection.setDefaultSSLSocketFactory((SSLSocketFactory) SSLSocketFactory.getDefault());
-        URL url;
+        URI uri;
         try {
-            url = new URL(urlString);
-        } catch (MalformedURLException malformedUrlException) {
+            uri = new URI(uriString);
+        }
+        catch (URISyntaxException e) {
             return false;
         }
         try {
-            var conn = (HttpsURLConnection) url.openConnection();
+            var conn = (HttpsURLConnection) uri.toURL().openConnection();
             conn.connect();
             // Connection with standard java library succeeded
             // -> according to this system, the server has a trusted certificate
             return true;
-        } catch (IOException e) {
+        }
+        catch (IOException e) {
             return false;
         }
     }
 
+
     public Result<Certificate[]> getSelfSignedCertificate(String urlString) {
         SSLContext sslContext;
-        URL url;
+        URI uri;
         try {
-            url = new URL(urlString);
-        } catch (MalformedURLException malformedUrlException) {
-            return Result.failure(List.of(malformedUrlException.getMessage()));
+            uri = new URI(urlString);
+        }
+        catch (URISyntaxException uriSyntaxException) {
+            return Result.failure(List.of(uriSyntaxException.getMessage()));
         }
 
         try {
             sslContext = SSLContext.getInstance("TLS");
             sslContext.init(null, TRUST_ALL_MANAGER, new SecureRandom());
-        } catch (NoSuchAlgorithmException | KeyManagementException generalSecurityException) {
+        }
+        catch (NoSuchAlgorithmException | KeyManagementException generalSecurityException) {
             return Result.failure(List.of(generalSecurityException.getMessage()));
         }
 
@@ -95,24 +104,27 @@ public class DefaultSelfSignedCertificateRetriever implements SelfSignedCertific
         HttpsURLConnection conn;
 
         try {
-            conn = (HttpsURLConnection) url.openConnection();
+            conn = (HttpsURLConnection) uri.toURL().openConnection();
             conn.connect();
-        } catch (IOException e) {
+        }
+        catch (IOException e) {
             return Result.failure(List.of(e.getMessage()));
         }
 
         X509Certificate[] certs;
         try {
             certs = (X509Certificate[]) conn.getServerCertificates();
-        } catch (SSLPeerUnverifiedException e) {
+        }
+        catch (SSLPeerUnverifiedException e) {
             return Result.failure("peer unverified");
         }
 
         try {
-            for (X509Certificate cert : certs) {
+            for (X509Certificate cert: certs) {
                 cert.checkValidity();
             }
-        } catch (CertificateExpiredException | CertificateNotYetValidException e) {
+        }
+        catch (CertificateExpiredException | CertificateNotYetValidException e) {
             return Result.failure("expired");
         }
 
